<resources>
    <string name="app_name">Epp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="receiving">Receiving</string>
    <string name="put_away">Deliver</string>
    <string name="audit">Audit</string>
    <string name="start_audit">Start audit</string>
    <string name="export_audit">Export audit</string>
    <string name="bin_code">Bin code</string>
    <string name="item_code">Item code</string>
    <string name="serial_number">Serial number</string>
    <string name="quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="received_list">Received list</string>
    <string name="locator">Locator</string>
    <string name="audit_list">Audit list</string>
    <string name="loading_3dots">Loading...</string>
    <string name="please_enter_ip_address">Please enter ip address</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="wrong_ip">Wrong ip</string>
    <string name="please_enter_your_user_name">Please enter your user name!</string>
    <string name="please_enter_your_password">Please enter your password!</string>
    <string name="error_in_sending_data">Error in sending data, Please check connection to network!</string>
    <string name="error_in_getting_data">Error in getting data!</string>
    <string name="ok">OK</string>
    <string name="sub_inventory">Sub inventory</string>
    <string name="no_orders">No Orders</string>
    <string name="qty">Quantity</string>
    <string name="please_scan_valid_code">Please scan valid code!</string>
    <string name="please_scan_or_enter_locator_code">Please scan or enter locator code!</string>
    <string name="please_scan_or_enter_item_code">Please scan or enter item code!</string>
    <string name="please_enter_qty">Please enter quantity</string>
    <string name="please_enter_valid_qty">Please enter valid qty</string>
    <string name="this_item_does_not_belong_to_the_selected_sub_inventory">This item does not belong to the selected sub inventory!</string>
    <string name="please_select_sub_inventory">Please select sub inventory!</string>
    <string name="please_scan_same_serial">Please scan same serial!</string>
    <string name="no_transactions_found">No transactions found!</string>
    <string name="please_scan_same_item_code">Please scan same item code!</string>
    <string name="finish_audit">Finish audit</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_to_finish_tracking_in_subinventory">"Are You sure to finish tracking in subInventory "</string>
    <string name="main_menu">Main Menu</string>
    <string name="audited_list">Audited list</string>
    <string name="start_finishing_audit">Start finishing audit</string>
    <string name="audit_menu">Audit Menu</string>
    <string name="log_out">Log out</string>
    <string name="please_select_sub_inventory_first">Please select sub-inventory first!</string>
    <string name="auto_save">Auto save</string>
    <string name="you_are_not_allowed_to_turn_off_auto_save_switch">You are not allowed to turn off auto save switch</string>
    <string name="please_click_save_before_scan_different_item_code">Please click Save before scan different item code</string>
    <string name="organizations">Organizations</string>
    <string name="operating_unit">Operating unit</string>
    <string name="chemical_factory">Factory</string>
    <string name="indirect_chemical">Indirect chemical</string>
    <string name="spare_parts">Spare parts</string>
    <string name="issue">Issue</string>
    <string name="epp_organizations">Epp organizations</string>
    <string name="issuing_transactions">Issuing transactions</string>
    <string name="item">Item</string>
    <string name="allocate">Allocate</string>
    <string name="transact">Transact</string>
    <string name="transaction_number">Transaction number</string>
    <string name="lot_number">Lot number</string>
    <string name="work_order_number">Work order number</string>
    <string name="move_order_number">Move order number</string>
    <string name="lot_serial">Lot / serial</string>
    <string name="lot_details">Lot details</string>
    <string name="transaction_history_indirect_chemicals">Transaction History(Indirect chemicals)</string>
    <string name="request_lines_allocations_indirect_chemicals">Request lines allocations(Indirect chemicals)</string>
    <string name="transact_move_order_chemical_factory">Transact move order (Factory)</string>
    <string name="transaction_history_chemical_history">Transaction history(Chemical history)</string>
    <string name="receiving_menu">Receiving menu</string>
    <string name="receipt_number">Receipt number</string>
    <string name="purchase_order_number">Purchase order number</string>
    <string name="rejected_quantity">Rejected quantity</string>
    <string name="comments">Comments</string>
    <string name="start_receiving">Start Receiving</string>
    <string name="start_inspection">Start Inspection</string>
    <string name="start_put_away">Start Delivering</string>
    <string name="put_away_details">Deliver details</string>
    <string name="final_products">Final products</string>
    <string name="transaction_date">Transaction date</string>
    <string name="select_a_date">Select a Date</string>
    <string name="material">Material</string>
    <string name="search">Search</string>
    <string name="reference">Reference</string>
    <string name="issue_work_orders_list">Issue work orders list</string>
    <string name="return_work_orders_list">Return work orders list</string>
    <string name="start_issue">Start issue</string>
    <string name="receipt_date">Receipt date</string>
    <string name="put_away_date">Deliver date</string>
    <string name="click_back_again_to_exit">Click BACK again to exit</string>
    <string name="_return">Return</string>
    <string name="return_to_vendor">Return to vendor</string>
    <string name="return_to_warehouse">ٌReturn to warehouse</string>
    <string name="return_date">Return date</string>
    <string name="start_return">Start return</string>
    <string name="receive_po">Receive po</string>
    <string name="inspection">Inspection</string>
    <string name="counting">Counting</string>
    <string name="warehouse">Warehouse</string>
    <string name="purchase_orders_list">Purchase orders list</string>
    <string name="start_receive">Start receive</string>
    <string name="po_details">PO details</string>
    <string name="received_qty">Received qty</string>
    <string name="po_qty">PO qty</string>
    <string name="p_o_details">PO Details</string>
    <string name="item_description">Item Description</string>
    <string name="rejected_qty">Rejected qty</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="language_letter">ع</string>
    <string name="mobco_logo">Mobco logo</string>
    <string name="locator_code">Locator code</string>
    <string name="counting_no">Counting number</string>
    <string name="counted_list">Counted list</string>
    <string name="put_away_list">Put  away list</string>
    <string name="please_enter_your_username">Please enter your username!</string>
    <string name="transfer">Transfer</string>
    <string name="returns">Returns</string>
    <string name="reports">Reports</string>
    <string name="receipt_no">Receipt no.</string>
    <string name="wrong_item_code">Wrong item code</string>
    <string name="please_scan_item_code">Please scan item code!</string>
    <string name="please_enter_receive_qty">Please enter received qty</string>
    <string name="please_enter_receipt_no">Please enter receipt number</string>
    <string name="please_enter_valid_receive_qty">Please enter valid receive qty!</string>
    <string name="scanned_item_is_fully_received">Scanned Item is fully received!</string>
    <string name="error_in_connection">Error in connection</string>
    <string name="organization_number">Organization number</string>
    <string name="po_number">PO number</string>
    <string name="items_list">Items List</string>
    <string name="please_enter_organization_number">Please enter organization number!</string>
    <string name="please_enter_po_number">Please enter po number!</string>
    <string name="make_sure_that_the_organization_has_purchase_orders">Please make sure that the organization has purchase orders.</string>
    <string name="accepted_qty_must_be_less_or_equal_to_received_qty">Accepted quantity must be less or equal than received qty!</string>
    <string name="please_enter_accepted_qty">Please enter accepted qty</string>
    <string name="please_enter_valid_accepted_qty">Please enter valid accepted quantity</string>
    <string name="please_scan_subinventory_code">Please scan subinventory code</string>
    <string name="please_scan_locator_code">Please scan locator code</string>
    <string name="please_enter_received_quantity_first">Please enter received quantity first!</string>
    <string name="added_before">Added before!</string>
    <string name="received_qty_must_be_less_or_equal_remaining_qty">Received quantity must be less or equal remaining quantity!</string>
    <string name="enter_receiving_data_first">Enter receiving data first!</string>
    <string name="date">Date</string>
    <string name="organization">Organization</string>
    <string name="new_receipt_no">New receipt no.</string>
    <string name="please_enter_valid_receipt_no">Please enter valid receipt no.!</string>
    <string name="please_select_date">Please select date</string>
    <string name="wrong_locator">Wrong locator!</string>
    <string name="error_in_saving_data">Error in saving data</string>
    <string name="please_select_lot">Please select lot</string>
    <string name="by_item">By item</string>
    <string name="by_locator">By locator</string>
    <string name="no_organizations_found">No Organizations found</string>
    <string name="please_select_organization">Please select organization</string>
    <string name="please_scan_or_select_item_code">Please scan or select item code</string>
    <string name="please_scan_or_select_locator_code">Please scan or select locator code</string>
    <string name="cycle_count">Cycle count</string>
    <string name="start_cycle_count">Start cycle count</string>
    <string name="please_scan_or_enter_valid_locator_code">Please scan or enter valid locator code!</string>
    <string name="please_select_organization_first">Please select organization first!</string>
    <string name="on_hand">On hand</string>
    <string name="finish_count">Finish count</string>
    <string name="no_items_found">No items found</string>
    <string name="return_menu">Return menu</string>
    <string name="enter_move_order_number">Enter move order number</string>
    <string name="sub_inventory_from">Sub inventory from</string>
    <string name="locator_from">Locator from</string>
    <string name="sub_inventory_to">Sub inventory to</string>
    <string name="locator_to">Locator to</string>
    <string name="no_lines_for_this_move_order">No lines for this move order!</string>
    <string name="please_enter_valid_move_order_number">Please enter valid move order number!</string>
    <string name="on_hand_qty">On hand qty</string>
    <string name="item_info">Item info</string>
    <string name="move_order_receive">Move Order Receive</string>
    <string name="issue_finish_product">Issue Finish Product</string>
    <string name="no_received_pos_to_be_inspected">No received pos to be inspected</string>
    <string name="change_password">Change password</string>
</resources>