<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Ui.Audit.CycleCount.CycleCount.CycleCountFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/organizations"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/organization"
        app:layout_constraintTop_toBottomOf="@+id/cycle_count_type">

        <AutoCompleteTextView
            android:id="@+id/organizations_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionGo"
            android:inputType="none"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/cycle_count_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/by_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:checked="true"
            android:text="@string/by_item" />

        <RadioButton
            android:id="@+id/by_locator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_locator" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_code"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/item_code"
        app:layout_constraintTop_toBottomOf="@+id/organizations"
        app:startIconDrawable="@drawable/ic_barcode_icon">

        <AutoCompleteTextView
            android:id="@+id/item_code_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionGo"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locator_code"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/locator_code"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/item_code"
        app:startIconDrawable="@drawable/ic_barcode_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/locator_code_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionGo"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_cycle_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="50dp"
        android:text="@string/start_cycle_count"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locator_code" />

</androidx.constraintlayout.widget.ConstraintLayout>