<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.gbs.epp_project.Ui.Receiving.EppOrganizations.Receive.ReceivePO.ReceivePOFragment">

    <TextView
        android:id="@+id/warehouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warehouse"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/po_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/po_number"
        app:layout_constraintTop_toBottomOf="@+id/warehouse"
        app:startIconDrawable="@drawable/orders_icon"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/icon_search">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:digits="0123456789"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>



    <androidx.constraintlayout.widget.Group
        android:id="@+id/data_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="po_header_operating_unit,po_header_data,start_receiving,items_list" />

    <include
        android:id="@+id/po_header_data"
        layout="@layout/po_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/po_number" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/po_header_operating_unit"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/operating_unit"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/po_header_data">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/operating_unit_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:digits="0123456789"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_receiving"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/start_receive"
        app:icon="@drawable/receive_2"
        app:layout_constraintEnd_toStartOf="@+id/items_list"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/po_header_operating_unit" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/items_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/items_list"
        app:icon="@drawable/baseline_menu_24"
        app:layout_constraintBottom_toBottomOf="@+id/start_receiving"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/start_receiving"
        app:layout_constraintTop_toTopOf="@+id/start_receiving" />


</androidx.constraintlayout.widget.ConstraintLayout>